--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <a  href="./normal.html">Distribucion normal</a>
           <a  href="./binomial.html">Distribucion binomial</a>
           <a  href="./poisson.html">Distribucion poisson</a>
-          
+          <a  href="./regrelin.html">Regresion lineal</a>  
         </div>
         
       <div class="content">
