--- a/normal.html
+++ b/normal.html
@@ -89,7 +89,7 @@ div.content {
       <a  href="./normal.html">Distribucion normal</a>
       <a  href="./binomial.html">Distribucion binomial</a>
       <a  href="./poisson.html">Distribucion poisson</a>
-      
+      <a  href="./regrelin.html">Regresion lineal</a>
     </div>
   <div class="content">
 
