--- a/regrelin.html
+++ b/regrelin.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculadora de Regresión Lineal</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+    .chart-container {
+      position: relative;
+      width: 100%;
+      height: 0;
+      padding-bottom: 75%; /* Ajusta este valor para cambiar la proporción de la gráfica */
+      margin-bottom: -10px; /* Ajusta este valor para reducir la separación */
+    }
+    .chart-container canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    /*SIDEBAR*/
+.sidebar {  
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #ededed;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+}
+
+.sidebar a{
+    display: block;
+    color: black;
+    padding: 16px;
+    text-decoration: none;
+}
+
+.sidebar a.active {
+    background-color: #b8dae0;
+    color: rgb(0, 0, 0);
+}
+
+.sidebar a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+}
+
+div.content {
+    margin-left: 200px;
+    padding: 1px 16px;
+    height: 1000px;
+}
+
+@media screen and (max-width: 700px) 
+{
+    .sidebar 
+    {
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+    .sidebar a {float: left;}
+    div.content {margin-left: 0;}
+}
+
+@media screen and (max-width: 400px) 
+{
+    .sidebar a 
+    {
+        text-align: center;
+        float: none;
+    }
+}  
+  </style>
 </head>
 <body>
+      <!-- Sidebar -->
+      <div class="sidebar">
+        <a class="active" href="./index.html">Inicio</a>
+        <a  href="./normal.html">Distribucion normal</a>
+        <a  href="./binomial.html">Distribucion binomial</a>
+        <a  href="./poisson.html">Distribucion poisson</a>
+        <a  href="./regrelin.html">Regresion lineal</a>
+        
+      </div>
+    <div class="content">
+  
   <div class="container mt-5">
     <h1>Calculadora de Regresión Lineal</h1>
     <div class="row">
@@ -32,15 +117,16 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Gráfica de Regresión Lineal</h5>
-            <div class="chart-container" style="position: relative; height: 365px; width: 100%;">
+            <div class="chart-container">
               <canvas id="regresion-chart"></canvas>
             </div>
-            <div id="regresion-resultado" class="mt-3"></div>
+            <div id="regresion-resultado" class="mt-2"></div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
   <script>
     var regresionChart;
@@ -55,7 +141,7 @@
       var regressionResult = linearRegression(xValues, yValues);
 
       mostrarGraficaRegresion(xValues, yValues, regressionResult);
-      document.getElementById("regresion-resultado").innerHTML = "La ecuación de la regresión lineal es: y = " + regressionResult.m.toFixed(2) + "x + " + regressionResult.b.toFixed(2);
+      document.getElementById("regresion-resultado").innerHTML = "La ecuación de la regresión lineal es: y = " + regressionResult.b.toFixed(2) + " + " + regressionResult.a.toFixed(2) + "x";
     }
 
     function linearRegression(xValues, yValues) {
@@ -75,15 +161,13 @@
       var xMean = xSum / n;
       var yMean = ySum / n;
 
-      var numerator = xySum - n *
-
- xMean * yMean;
+      var numerator = xySum - n * xMean * yMean;
       var denominator = xSquaredSum - n * Math.pow(xMean, 2);
 
-      var m = numerator / denominator;
-      var b = yMean - m * xMean;
+      var a = numerator / denominator;
+      var b = yMean - a * xMean;
 
-      return { m: m, b: b };
+      return { a: a, b: b };
     }
 
     function mostrarGraficaRegresion(xValues, yValues, regressionResult) {
@@ -96,20 +180,28 @@
       regresionChart = new Chart(ctx, {
         type: "scatter",
         data: {
-          datasets: [{
-            label: "Puntos de Datos",
-            data: xValues.map((x, i) => ({ x: x, y: yValues[i] })),
-            backgroundColor: "blue",
-            borderColor: "blue",
-            showLine: false,
-            pointRadius: 5
-          }, {
-            label: "Regresión Lineal",
-            data: xValues.map((x, i) => ({ x: x, y: regressionResult.m * x + regressionResult.b })),
-            backgroundColor: "red",
-            borderColor: "red",
-            showLine: true
-          }]
+          datasets: [
+            {
+              label: "Puntos de Datos",
+              data: xValues.map((x, i) => ({ x: x, y: yValues[i] })),
+              backgroundColor: "blue",
+              borderColor: "blue",
+              showLine: false,
+              pointRadius: 5
+            },
+            {
+              label: "Regresión Lineal",
+              data: [
+                { x: Math.min(...xValues), y: regressionResult.a * Math.min(...xValues) + regressionResult.b },
+                { x: Math.max(...xValues), y: regressionResult.a * Math.max(...xValues) + regressionResult.b }
+              ],
+              backgroundColor: "transparent",
+              borderColor: "red",
+              showLine: true,
+              lineTension: 0,
+              borderWidth: 2
+            }
+          ]
         },
         options: {
           responsive: true,
